--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
-
 <!DOCTYPE html >
 <html>
-	<head>
-		<title>Bootstrap 101 Template </title>
-		<meta name="viewport" content="width =device -width , initial - scale =1.0"> 
-		<!-- Bootstrap -->
-		<link href="css/bootstrap.min.css" rel="stylesheet"	media="screen"> </head>
-	<body>
-		<h1>Hello , world !</h1>
-		<script src="http://code.jquery.com/jquery.js"></script>
- 		<script src="js/bootstrap.min.js"></script>
- 	</body>
- </html>
+<head>
+<title>Bootstrap 101 Template</title>
+<meta name="viewport"
+	content="width =device -width , initial - scale =1.0">
+<!-- Bootstrap -->
+<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+</head>
+
+<body>
+	<h1>Willkommen</h1>
+	<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+		diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+		erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+		et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+		Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+		sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+		dolore magna aliquyam erat, sed diam voluptua.</p>
+	<h4>Teil 1</h4>
+	<address>adress</address>
+	<!-- <blockquote><p>Dies ist ein Blockquote</p></blockquote> -->
+	<del>Text durchgestrichen</del>
+	<ins>
+		<strong>Ich bin strong</strong>
+	</ins>
+	<ol>
+		<li>list</li>
+	</ol>
+	<p>paragraph</p>
+	<pre>preformatted</pre>
+	
+	<p>
+    <a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+  </p>
+</body>
+</html>
